<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">О программе</string>
    <string name="about_string">Клиент для программно-аппаратного комплекса http://scat.su</string>
    <string name="accuracy_value">Точность: %.3f</string>
    <string name="action_settings">Настройки</string>
    <string name="add_bluetooth_printer">Перейдите в настройки Bluetooth, чтобы добавить новое устройство</string>
    <string name="add_payment">Пополнить баланс</string>
    <string name="add_to_queue">Добавить в очередь</string>
    <string name="add_usb_printer">Подключите устройство используя USB кабель.nВам может понадобиться кабель OTG</string>
    <string name="ads_header">Объявления</string>
    <string name="advanced">До­пол­ни­тель­но</string>
    <string name="alert_sound">Звук уведомления в приложении</string>
    <string name="already_on_order" formatted="false">Вам был отправлен заказ %d, но он будет отклонен. Вы уже на заказе %d</string>
    <string name="amount">Стоимость</string>
    <string name="amount_value">Стоимость: %s</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="apartment">кв. %s</string>
    <string name="app_ismodified">Приложение модифицировано</string>
    <string name="app_name">Скат</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Оформление</string>
    <string name="appupdater_btn_disable">"Don't show again"</string>
    <string name="appupdater_btn_dismiss">Dismiss</string>
    <string name="appupdater_btn_update">Update</string>
    <string name="appupdater_channel">appupdater_channel_01</string>
    <string name="appupdater_channel_name">Update notifications</string>
    <string name="appupdater_update_available">New update available!</string>
    <string name="appupdater_update_available_description_dialog">Update %1$s is available to download. By downloading the latest update you will get the latest features, improvements and bug fixes for %2$s.</string>
    <string name="appupdater_update_available_description_dialog_before_release_notes">"Update %1$s is available to download.

You can get these new features:
%2$s"</string>
    <string name="appupdater_update_available_description_notification">Update %1$s of %2$s is available to download</string>
    <string name="appupdater_update_available_description_snackbar">Update %1$s is available!</string>
    <string name="appupdater_update_not_available">No updates available</string>
    <string name="appupdater_update_not_available_description">"You've got the latest version available of %s!"</string>
    <string name="around_to">Округление до</string>
    <string name="arrival_confirmation">"Вы уверены что подъедете за "</string>
    <string name="assigned_orders">Мои заказы</string>
    <string name="assigned_pre_orders">Мои предзаказы</string>
    <string name="auth">Авторизация</string>
    <string name="auto_reg">Автоопределение стоянки</string>
    <string name="auto_register_enabled">Включена авторегистрация</string>
    <string name="available_profiles">Доступные профили городов</string>
    <string name="ban_by_admin">Заблокирован администратором</string>
    <string name="ban_by_balance">Низкий баланс</string>
    <string name="ban_by_order_reject">Отказ от заказа</string>
    <string name="ban_by_photo_report">Не пройден фотоотчет</string>
    <string name="ban_by_prepaid">Истек предоплатный период</string>
    <string name="ban_by_rating">Низкий рейтинг</string>
    <string name="ban_by_reserved_orders_ban">Отказ от предварительного заказа</string>
    <string name="ban_by_work_time">Смена не активна</string>
    <string name="ban_seconds">(%d с)</string>
    <string name="bill_printing_failed">Ошибка при печати чека</string>
    <string name="booking_cancel_sound">Звук отмены заказа</string>
    <string name="booking_change_sound">Звук изменения заказа</string>
    <string name="booking_confirmed_sound">Звук подверждения заказа</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="branding_default_lang">None</string>
    <string name="branding_new_driver_url">None</string>
    <string name="branding_welcome_text">None</string>
    <string name="button">Кнопка</string>
    <string name="cabinet">Личный кабинет</string>
    <string name="callClient">Позвонить</string>
    <string name="callsign">Позывной</string>
    <string name="cancel">Отмена</string>
    <string name="cash">Наличные</string>
    <string name="cash_accepted">"Приняты
наличные"</string>
    <string name="cfrmNotStartedTaximeter">Напоминать о запуске таксометра</string>
    <string name="cfrmNotStartedTaximeterSummary">При движении во время ожидания клиента</string>
    <string name="cfrmOnplace">Подтверждение На месте</string>
    <string name="cfrmOnplaceSummary">Запрашивать подтверждение при подъезде к клиенту</string>
    <string name="cfrmReject">Подтверждение отказа</string>
    <string name="cfrmRejectSummary">Запрашивать подтверждение при отказе от заказа</string>
    <string name="cfrmStartStop">Подтверждение запуска, остановки</string>
    <string name="cfrmStartStopSummary">Запрашивать подтверждение при запуске и остановке таксометра</string>
    <string name="cfrmTime">Подтверждение времени</string>
    <string name="cfrmTimeSummary">Запрашивать подтверждение на установку времени подъезда на заказ</string>
    <string name="channel_ads_description">Уведомления об объявлениях таксопарка</string>
    <string name="channel_ads_name">Объявления</string>
    <string name="channel_chat_order_description">Уведомления о новых сообщениях текущего заказа</string>
    <string name="channel_chat_order_name">Чат заказа</string>
    <string name="channel_notice">Уведомления о блокировке</string>
    <string name="channel_notice_description">Уведомления о блокировке и прочие уведомления</string>
    <string name="channel_ontherun">Заказ вдогонку</string>
    <string name="channel_ontherun_description">Уведомления о поступающих заказах вдогонку</string>
    <string name="choose_sound">Выбрать звук</string>
    <string name="connection">Соединение</string>
    <string name="custom_sound">Свой звук</string>
    <string name="default_value">По умолчанию</string>
    <string name="disconnected_sound">Звук потери соединения</string>
    <string name="district_size">Размер стоянок</string>
    <string name="do_not_ask">Не спрашивать</string>
    <string name="do_not_lock_screen">Не блокировать экран</string>
    <string name="do_not_lock_screen_summary">Экран не будет блокироваться при активном окне таксометра</string>
    <string name="enable_printing">Включить поддержку печати</string>
    <string name="exit">Выход</string>
    <string name="exit_dialog_hint">Если вы хотите временно приостановить работу, используйте кнопку Занят</string>
    <string name="exit_dialog_text">Сессия будет закрыта, вы будете сняты со всех регистраций и очередей</string>
    <string name="exit_no_dialog">Больше не спрашивать</string>
    <string name="free_order_size">Размер текста свободных заказов</string>
    <string name="free_order_sound">Звук свободного заказа</string>
    <string name="gpsStatusInUse">Спутников используется: 0</string>
    <string name="gpsStatusInView">Спутников в поле видимости: 0</string>
    <string name="icon_fa_fire"></string>
    <string name="icon_fa_minus"></string>
    <string name="icon_fa_plus"></string>
    <string name="init_zero">0</string>
    <string name="interface_look">Интерфейс</string>
    <string name="latitude">Долгота</string>
    <string name="locale">Язык (Language)</string>
    <string name="logo">Логотип</string>
    <string name="longitude">Широта</string>
    <string name="navigation_system">Навигационная система</string>
    <string name="new_pre_booking_sound">Звук назначения предварительного заказа</string>
    <string name="next_order_sound">Звук следующего заказа</string>
    <string name="no_sound">Без звука</string>
    <string name="off">Выкл</string>
    <string name="ok">OK</string>
    <string name="on">Вкл</string>
    <string name="order_sounds">Звук входящего заказа</string>
    <string name="other">Прочее</string>
    <string name="permission_overlay">Показывать поверх других приложений</string>
    <string name="permission_overlay_description">Для отображения окна входящих заказов, когда приложение находится в фоне</string>
    <string name="permission_overlay_step1">Найдите приложение в списке и выберите его</string>
    <string name="permission_overlay_step2">Разрешите показывать поверх других приложений</string>
    <string name="permissions_required">Приложению необходимы следующие разрешения</string>
    <string name="please_allow_heads_up">Включить всплывающие уведомления для канала %s</string>
    <string name="please_allow_notifications">Для корректной работы приложения необходимо совершить следующие действия:</string>
    <string name="pre_booking_sound">Звук предварительного заказа</string>
    <string name="settings_asklogin">Запрашивать логин</string>
    <string name="settings_login">Логин</string>
    <string name="settings_mainserver">Основной сервер</string>
    <string name="settings_orientation">Ориентация экрана</string>
    <string name="settings_password">Пароль</string>
    <string name="settings_port">Порт</string>
    <string name="settings_reservserver">Резервный сервер</string>
    <string name="show_order_map_by_default">Открывать карту в заказе</string>
    <string name="show_order_map_by_default_summary">Открывать в заказе по-умолчанию вкладку Карта</string>
    <string name="sounds">Звуковые уведомления</string>
    <string name="speech_incoming_order">Озвучивать входящий заказ</string>
    <string name="speech_incoming_order_summary">Входящие заказы будут озвучены голосом</string>
    <string name="start_taximeter_ask_sound">Звук незапущенного таксометра</string>
    <string name="taximeter_paused_sound">Звук паузы таксометра</string>
</resources>