<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:layout_gravity="center" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="20.0dip" style="?mainLayoutStyle"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="@dimen/font_base_large" android:gravity="center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permissions_required" style="?topPanelStyle" />
    <ScrollView android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textSize="@dimen/font_increased" android:textColor="?noteFontColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/permission_overlay" style="?textStyle" />
            <TextView android:textSize="@dimen/font_base" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/permission_overlay_description" style="?textStyle" />
            <LinearLayout android:orientation="vertical" android:id="@id/androidSdk30" android:layout_width="fill_parent" android:layout_height="wrap_content">
                <TextView android:textSize="@dimen/font_base" android:textColor="?baseFontColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip" android:layout_marginBottom="5.0dip" android:text="@string/permission_overlay_step1" style="?textStyle" />
                <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <ImageView android:layout_gravity="center" android:paddingTop="5.0dip" android:paddingBottom="5.0dip" android:layout_width="wrap_content" android:layout_height="48.0dip" android:src="@mipmap/ic_launcher" android:adjustViewBounds="true" android:contentDescription="@string/logo" android:layout_marginEnd="10.0dip" />
                    <TextView android:textSize="@dimen/font_base" android:gravity="start|center" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/app_name" android:drawablePadding="5.0dip" android:layout_weight="1.0" style="?textStyle" />
                </LinearLayout>
                <TextView android:textSize="@dimen/font_base" android:textColor="?baseFontColor" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="5.0dip" android:layout_marginBottom="5.0dip" android:text="@string/permission_overlay_step2" style="?textStyle" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <LinearLayout android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:gravity="center" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/do_not_ask" android:layout_weight="1.0" android:layout_marginEnd="5.0dip" style="?buttonStyle" />
        <Button android:gravity="center" android:id="@id/okButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" style="?buttonPrimaryStyle" />
    </LinearLayout>
</LinearLayout>