<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?mainLayoutStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0">
        <TextView android:textSize="@dimen/font_base_large" android:gravity="center" android:id="@id/header" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/channel_notice" style="?topPanelStyle" />
        <TextView android:gravity="start" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/please_allow_notifications" style="?textStyle" />
        <TextView android:textSize="@dimen/font_base" android:textColor="?noteFontColor" android:gravity="start" android:id="@id/text" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/please_allow_heads_up" style="?textStyle" />
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <Button android:gravity="center" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/exit" android:layout_weight="1.0" android:layout_marginEnd="5.0dip" style="?buttonStyle" />
        <Button android:gravity="center" android:id="@id/okButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" style="?buttonPrimaryStyle" />
    </LinearLayout>
</LinearLayout>