<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?mainLayoutStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:textSize="@dimen/font_base_large" android:gravity="center" android:id="@id/titleTextView" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" style="?topPanelStyle" />
    <LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <RadioButton android:textSize="@dimen/font_base_large" android:textColor="?baseFontColor" android:id="@id/disabledRadioButton" android:paddingTop="7.5dip" android:paddingBottom="7.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/no_sound" android:buttonTint="?baseFontColor" />
        <RadioButton android:textSize="@dimen/font_base_large" android:textColor="?baseFontColor" android:id="@id/defaultRadioButton" android:paddingTop="7.5dip" android:paddingBottom="7.5dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/default_value" android:buttonTint="?baseFontColor" />
        <LinearLayout android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <RadioButton android:textSize="@dimen/font_base_large" android:textColor="?baseFontColor" android:id="@id/customRadioButton" android:paddingTop="7.5dip" android:paddingBottom="7.5dip" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/custom_sound" android:layout_weight="1.0" android:buttonTint="?baseFontColor" />
            <Button android:gravity="center" android:layout_gravity="center" android:id="@id/customButton" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/choose_sound" style="?buttonStyle" />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout android:orientation="horizontal" android:paddingBottom="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:paddingStart="10.0dip" android:paddingEnd="10.0dip">
        <Button android:gravity="center" android:id="@id/cancelButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/cancel" android:layout_weight="1.0" android:layout_marginEnd="5.0dip" style="?buttonStyle" />
        <Button android:gravity="center" android:id="@id/okButton" android:layout_width="0.0dip" android:layout_height="wrap_content" android:text="@string/ok" android:layout_weight="1.0" android:layout_marginStart="5.0dip" style="?buttonPrimaryStyle" />
    </LinearLayout>
</LinearLayout>