<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent" style="?mainLayoutStyle"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <TextView android:id="@id/satellitesInUseText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/gpsStatusInUse" style="?textStyle" />
    <TextView android:id="@id/satellitesAllText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/gpsStatusInView" style="?textStyle" />
    <TextView android:id="@id/longitudeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/longitude" style="?textStyle" />
    <TextView android:id="@id/latitudeText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="@string/latitude" style="?textStyle" />
    <TextView android:id="@id/speedText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="" style="?textStyle" />
    <TextView android:id="@id/accuracyText" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginBottom="5.0dip" android:text="" style="?textStyle" />
    <su.skat.client.foreground.authorized.mainMenuAdvanced.gps.GpsSignalView android:id="@id/gpsSignalView" android:layout_width="fill_parent" android:layout_height="0.0dip" android:layout_weight="1.0" />
</LinearLayout>